--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -3,14 +3,14 @@
         "app_function": "vsubhuman.app",
         "aws_region": "us-west-2",
         "profile_name": "default",
-        "s3_bucket": "zappa.vsubhuman.com",
+        "s3_bucket": "com.vsubhuman.lambda",
         "project_name": "vsubhuman"
     },
     "production": {
         "app_function": "vsubhuman.app",
         "aws_region": "us-west-2",
         "profile_name": "default",
-        "s3_bucket": "zappa.vsubhuman.com",
+        "s3_bucket": "com.vsubhuman.lambda",
         "project_name": "vsubhuman"
     }
 }
