Added some template utils. Refactored the template. Added `/uc` mapping.

--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,18 +1,24 @@
 {
-    "dev": {
-        "app_function": "vsubhuman.app",
-        "aws_region": "us-west-2",
-        "profile_name": "default",
-        "s3_bucket": "com.vsubhuman.lambda",
-        "project_name": "vsubhuman"
-    },
-    "production": {
-        "app_function": "vsubhuman.app",
-        "aws_region": "us-west-2",
-        "profile_name": "default",
-        "s3_bucket": "com.vsubhuman.lambda",
-        "project_name": "vsubhuman",
-        "domain": "vsubhuman.com",
-        "lets_encrypt_key": "s3://com.vsubhuman.secure/vsubhuman.key"
+  "dev": {
+    "app_function": "vsubhuman.app",
+    "aws_region": "us-west-2",
+    "profile_name": "default",
+    "s3_bucket": "com.vsubhuman.lambda",
+    "project_name": "vsubhuman",
+    "environment_variables": {
+      "debug": "false"
     }
+  },
+  "production": {
+    "app_function": "vsubhuman.app",
+    "aws_region": "us-west-2",
+    "profile_name": "default",
+    "s3_bucket": "com.vsubhuman.lambda",
+    "project_name": "vsubhuman",
+    "domain": "vsubhuman.com",
+    "lets_encrypt_key": "s3://com.vsubhuman.secure/vsubhuman.key",
+    "environment_variables": {
+      "debug": "false"
+    }
+  }
 }
